Tests/Should_succeed/2_Variables/18_IntDeclMult.decaf
class Test {
	void main(){
		int a, b;
		WriteInt(a);
		WriteString("=0");
		WriteString("\n");
		WriteInt(b);
		WriteString("=0");
		WriteString("\n");
	}
}