Tests/Should_fail/6_Context/02_DoubleDecl.decaf
class Test {
	void main(){
		int a;
		int a;
		WriteString("0=1");
		WriteString("\n");
	}
}